Add Raft(Virtual Thread).